--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 fastapi
 uvicorn
-langchain
-openai
-faiss-cpu
-pymupdf
 python-dotenv
-tiktoken
+langchain
+langchain-community
+langchain-core
+langchainhub
 langchain-groq
+huggingface-hub
+sentence-transformers
+chromadb
+PyMuPDF
